@@ -9,6 +9,10 @@
 	  Disable new test for mos6502, where it fails (bug #3386).
 	* support/regression/tests/gcc-torture-execute-20040409-?.c:
 	  Disable parts of tests that test for GCC implementation-defined behaviour.
+	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_1_xy.c,
+	  support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_auto_yx.c,
+	  support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_global_xy.c:
+	  Disable tests for clang 13 that fail there due to clang 13 TS 6010 Provenance non-compliance.
 
 2022-05-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
